force-app/main/default/objects/Outlet_Product__c/Outlet_Product__c.object-meta.xml
<CustomObject>
    <label>Outlet Product</label>
    <pluralLabel>Outlet Products</pluralLabel>
    <description>Outlet Product</description>
    <nameField>
        <label>Outlet Product Name</label>
        <type>AutoNumber</type>
        <displayFormat>OPR-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>