force-app/main/default/objects/Outlet_Product__c/fields/Last_Qty__c.field-meta.xml
<CustomField>
    <fullName>Last_Qty__c</fullName>
    <label>Last Qty</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Last Qty</description>
</CustomField>