force-app/main/default/objects/Outlet_Product__c/fields/Must_Stock__c.field-meta.xml
<CustomField>
    <fullName>Must_Stock__c</fullName>
    <label>Must Stock</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Must Stock</description>
</CustomField>