force-app/main/default/objects/Outlet_Product__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <label>Outlet</label>
    <type>MasterDetail</type>
    <referenceTo>Outlet__c</referenceTo>
    <relationshipLabel>Outlet Products</relationshipLabel>
    <relationshipName>Outlet_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Outlet</description>
</CustomField>