force-app/main/default/objects/Outlet_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Outlet Products</relationshipLabel>
    <relationshipName>Product_Outlet_Products</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
</CustomField>